kubernetes/manifests/otus-docker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: otus-docker-deployment
    labels:
        app: otus-docker
spec:
    replicas: 3
    selector:
        matchLabels:
            app: otus-docker
    template:
        metadata:
            labels:
                app: otus-docker
        spec:
            containers:
                - name: otus-docker
                  image: escadockerhub/otus.docker:1.0
                  ports:
                      - containerPort: 8000
                        name: web
                  livenessProbe:
                      httpGet:
                          port: 8000
                          path: /health
                      initialDelaySeconds: 10
                      periodSeconds: 20
                  readinessProbe:
                      httpGet:
                          port: 8000
                          path: /health
                      initialDelaySeconds: 5
                      periodSeconds: 10
