kubernetes/manifests/otus-docker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-docker-service
  labels:
    app: otus-docker
spec:
  selector:
    app: otus-docker
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: web
