kubernetes/manifests/otus-docker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-docker-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: "/"
            backend:
              service:
                name: otus-docker-service
                port: 
                  number: 80
            pathType: Prefix
